[build] add pty4j as dependency